The intrisic size of picture image inside a template is always zero https://bugs.webkit.org/show_bug.cgi?id=227682

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/embedded-content/the-img-element/adoption-expected.txt:

Source/WebCore:

When the picture element is inside a template element, it belongs to a template document which does not
have frame or RenderView, this would affect the source selection and size calculation. Though it calls
sourcesChanged to adjust the source in HTMLPictureElement::didMoveToNewDocument, but at this point
the image element is still inside the template document, so it does not help with this scenario. To
fix it, call sourcesChanged in HTMLImageElement::didMoveToNewDocument instead.

Test: fast/picture/picture-inside-template.html

* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::didMoveToNewDocument):
* html/HTMLPictureElement.cpp:
(WebCore::HTMLPictureElement::didMoveToNewDocument): Deleted.
* html/HTMLPictureElement.h:

LayoutTests:

* fast/picture/picture-inside-template-expected.txt: Added.
* fast/picture/picture-inside-template.html: Added.


Canonical link: https://commits.webkit.org/243387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284667 268f45cc-cd09-0410-ab3c-d52691b4dbfc